# egg_omelette

./: README.md  pyproject.toml
src/egg_omelette/: __init__.py
