[project]
name = "egg-omelette"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Christian Klinger", email = "ck@novareto.de" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 2.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/egg_omelette"]