[project]
name = "egg-omelette"
version = "0.1.0"
description = "Creates symlinks to installed packages for development"
authors = [
    { name = "Christian Klinger", email = "ck@novareto.de" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
egg-omelette = "egg_omelette:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"